--- a/hardware_interface/package.xml
+++ b/hardware_interface/package.xml
@@ -10,6 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>control_msgs</depend>
+  <depend>pluginlib</depend>
   <depend>rclcpp</depend>
   <depend>rcpputils</depend>
   <depend>tinyxml2_vendor</depend>
