Uncrustify and rename test file

--- a/ros2_control_components/CMakeLists.txt
+++ b/ros2_control_components/CMakeLists.txt
@@ -40,10 +40,10 @@ if(BUILD_TESTING)
 
   find_package(ament_cmake_gmock REQUIRED)
 
-  ament_add_gmock(test_joints test/test_joints.cpp)
-  ament_target_dependencies(test_joints hardware_interface pluginlib)
+  ament_add_gmock(test_position_joint test/test_position_joint.cpp)
+  ament_target_dependencies(test_position_joint hardware_interface pluginlib)
   # prevent pluginlib from using boost
-  target_compile_definitions(test_joints PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
+  target_compile_definitions(test_position_joint PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 endif()
 
 ament_export_libraries(
